feat: implement GUI controller and application entry point with dependency updates for obfuscation engine support